updated main index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,28 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="finalProject.css">
     <!-- BOOTSTRAP (style only)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>Movie info</title>    
   </head>
   <body>
-
+    <div id="header">
+      <h1 id="main-title">Movie Information</h1>
+      
+    </div>
+    <div id="main-body">
+      <img src="http://i.dailymail.co.uk/i/pix/2014/11/19/2342D76900000578-2839605-The_collection_of_the_196_000_movie_posters_pictured_boasts_artw-12_1416390861852.jpg" width="400" id="main-page-img" alt="Main page image"/>
+      <p class="source">Source: dailymail.co.uk</p>
+      <br/>
+      <a href="listPage" id="main-button">Enter Site</button>
+    </div>
+    <div id="footer">
+      <div id="developer-info">
+        <h5>CINS 110 Final Project</h5>
+        <h5>Developer: HeuiChan (Terrence) Lim</h5>
+        <h5>California State University, Chico</h5>
+      </div>
+    </div>
   </body>
 </html>
