--- a/listPage.html
+++ b/listPage.html
@@ -3,9 +3,62 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="finalProject.css">
-    <!-- BOOTSTRAP (style only)-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="listpage.css">
   </head>
   <body>
+    <div class="header">
+      <h1 class="main-title">Movie Information</h1>
+    </div>
+    <div id="listPage-body">
+      <table>
+        <tr>
+          <th><h3>A</h3></th>
+          <th><h3>B</h3></th>
+          <th><h3>C</h3></th>
+          <th><h3>D</h3></th>
+          <th><h3>E</h3></th>
+          <th><h3>F</h3></th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="footer">
+      <div class="developer-info">
+        <h5>CINS 110 Final Project</h5>
+        <h5>Developer: HeuiChan (Terrence) Lim</h5>
+        <h5>California State University, Chico</h5>
+      </div>
+    </div>
   </body>
 </html>
