made a table of movie lists in listPage.html

--- a/listPage.html
+++ b/listPage.html
@@ -51,6 +51,154 @@
             </ul> 
           </td>
         </tr>
+        <tr>
+          <th><h3>G</h3></th>
+          <th><h3>H</h3></th>
+          <th><h3>I</h3></th>
+          <th><h3>J</h3></th>
+          <th><h3>K</h3></th>
+          <th><h3>L</h3></th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+        </tr>
+        <tr>
+          <th><h3>K</h3></th>
+          <th><h3>L</h3></th>
+          <th><h3>M</h3></th>
+          <th><h3>N</h3></th>
+          <th><h3>O</h3></th>
+          <th><h3>P</h3></th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+        </tr>
+        <tr>
+          <th><h3>Q</h3></th>
+          <th><h3>R</h3></th>
+          <th><h3>S</h3></th>
+          <th><h3>T</h3></th>
+          <th><h3>U</h3></th>
+          <th><h3>V</h3></th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+        </tr>
+        <tr>
+          <th><h3>W</h3></th>
+          <th><h3>X</h3></th>
+          <th><h3>Y</h3></th>
+          <th><h3>Z</h3></th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+          <td>
+            <ul>
+              <li><a href="#">Ant-Man</a></li>
+            </ul> 
+          </td>
+        </tr>
       </table>
     </div>
     <div class="footer">
