--- a/listPage.html
+++ b/listPage.html
@@ -1,9 +1,12 @@
+<!--HeuiChan Lim-->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="finalProject.css">
     <link rel="stylesheet" href="listpage.css">
+    <script type="text/javascript" src="finalProject.js"></script>
+    <title>List of Movies</title>
   </head>
   <body>
     <div class="header">
@@ -22,32 +25,7 @@
         <tr>
           <td>
             <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
+              <li><a href="view.html" id="title"  onclick="passMovie('Ant-man')">Ant-Man</a></li>
             </ul> 
           </td>
         </tr>
@@ -60,36 +38,7 @@
           <th><h3>L</h3></th>
         </tr>
         <tr>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
+
         </tr>
         <tr>
           <th><h3>K</h3></th>
@@ -100,36 +49,7 @@
           <th><h3>P</h3></th>
         </tr>
         <tr>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
+
         </tr>
         <tr>
           <th><h3>Q</h3></th>
@@ -140,36 +60,7 @@
           <th><h3>V</h3></th>
         </tr>
         <tr>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
+
         </tr>
         <tr>
           <th><h3>W</h3></th>
@@ -178,26 +69,7 @@
           <th><h3>Z</h3></th>
         </tr>
         <tr>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
-          <td>
-            <ul>
-              <li><a href="#">Ant-Man</a></li>
-            </ul> 
-          </td>
+
         </tr>
       </table>
     </div>
