added quiz page and functions for it

--- a/quiz.html
+++ b/quiz.html
@@ -4,18 +4,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="finalProject.css">
+    <script type="text/javascript" src="finalProject.js"></script>
     <title>Movie info</title>    
   </head>
-  <body>
+  <body onload="movieQuiz()">
     <div class="header">
-      <h1 class="main-title">Movie Information</h1>
+      <h1 class="main-title">Movie Quiz</h1>
     </div>
     <div id="main-body">
-      <img src="http://i.dailymail.co.uk/i/pix/2014/11/19/2342D76900000578-2839605-The_collection_of_the_196_000_movie_posters_pictured_boasts_artw-12_1416390861852.jpg" width="400" id="main-page-img" alt="Main page image"/>
-      <p class="source">Source: dailymail.co.uk</p>
-      <br/>
-      <a href="listPage.html" class="main-button">Enter List</button>
-      <a href="quiz.html" class="main-button">Enter Quiz</button>
+      <img src="" id="poster" width="400px" height="600px" alt="No Poster(s) to Show"></img>
+      <h2 id="movieName"></h2>
+      <p>Which Year the movie was released?</p>
     </div>
     <div class="footer">
       <div class="developer-info">
