added submission function in quiz page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <h1 class="main-title">Movie Information</h1>
     </div>
-    <div id="main-body">
+    <div class="main-body">
       <img src="http://i.dailymail.co.uk/i/pix/2014/11/19/2342D76900000578-2839605-The_collection_of_the_196_000_movie_posters_pictured_boasts_artw-12_1416390861852.jpg" width="400" id="main-page-img" alt="Main page image"/>
       <p class="source">Source: dailymail.co.uk</p>
       <br/>
