added final page and started working on the navigations

--- a/finalPage.html
+++ b/finalPage.html
@@ -5,24 +5,23 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="finalProject.css">
     <script type="text/javascript" src="finalProject.js"></script>
-    <title>Movie Quiz</title>    
+    <title>Movie Final Page</title>    
   </head>
   <body onload="movieQuiz()">
     <div class="header">
-      <h1 class="main-title">Movie Quiz</h1>
-      <a class="navigation" href="index.html">To Main</a> |
+      <h1 class="main-title">Movie Information</h1>
     </div>
     <div class="main-body">
-      <img src="" id="poster" width="400px" alt="No Poster(s) to Show"></img>
-      <h2 id="movieName"></h2>
-      <div id="scoreBlock">
-        <h2 id="displayScore">0 / 3</h2>
-      </div>
-      <p>Which Year the movie was released?</p>
-      <input type="text" id="inputAnswer" placeholder="Answer ex) 2017"/>
-      <button type="submit" id="submitBtn" onclick="submitAnswer()">Submit Answer</button>
+      <img src="http://posters.keepcalmandposters.com/7917076.jpg" width="400" id="end-page-img" alt="End page image"/>
+      <p class="source">source: keepcalmandposters.com</p>
+      <h2>THANK YOU FOR VISITING MY SITE</h2>
+      <h2>HAVE A WONDERFUL DAY</h2>
+
       <br/>
-      <br/>
+
+      <a href="index.html" class="main-button">To Main</button>
+      <a href="listPage.html" class="main-button">To List</button>
+      <a href="quiz.html" class="main-button">To Quiz</button>
     </div>
     <div class="footer">
       <div class="developer-info">
