Added navigation bars in listPage.html and quiz.html page

--- a/listPage.html
+++ b/listPage.html
@@ -11,6 +11,12 @@
   <body>
     <div class="header">
       <h1 class="main-title">Movie Information</h1>
+      <nav class="main-nav">
+        <ul class="navigation-bar">
+          <li><a class="navigation" href="index.html">To Main</a></li>
+          <li><a class="navigation" href="quiz.html">To Quiz</a></li>
+        </ul>
+      </nav>
     </div>
     <div id="listPage-body">
       <table>
@@ -24,9 +30,22 @@
         </tr>
         <tr>
           <td>
-            <ul>
-              <li><a href="view.html" id="title"  onclick="passMovie('Ant-man')">Ant-Man</a></li>
-            </ul> 
+            <a href="view.html" id="title"  onclick="passMovie('Ant-man')">Ant-Man</a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('Batman')">BatMan</a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('Captain America: Civil War')">Captain America: Civil War</a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('The Dark Knight')">The Dark Knight</a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('Edge of Tomorrow')">Edge of Tomorrow</a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('Fantastic Four')">Fantastic Four</a>
           </td>
         </tr>
         <tr>
@@ -38,7 +57,24 @@
           <th><h3>L</h3></th>
         </tr>
         <tr>
-
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+          </td>
+          <td>
+            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+          </td>
         </tr>
         <tr>
           <th><h3>K</h3></th>
