--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,12 @@
   <body onload="movieQuiz()">
     <div class="header">
       <h1 class="main-title">Movie Quiz</h1>
-      <a class="navigation" href="index.html">To Main</a> |
+      <nav class="main-nav">
+        <ul class="navigation-bar">
+          <li><a class="navigation" href="index.html">To Main</a></li>
+          <li><a class="navigation" href="listPage.html">To List</a></li>
+        </ul>
+      </nav>
     </div>
     <div class="main-body">
       <img src="" id="poster" width="400px" alt="No Poster(s) to Show"></img>
