added all movies into the table list in listPage.html

--- a/listPage.html
+++ b/listPage.html
@@ -30,22 +30,22 @@
         </tr>
         <tr>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('Ant-man')">Ant-Man</a>
+            <a href="view.html" class="title"  onclick="passMovie('Ant-man')">Ant-Man</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('Batman')">BatMan</a>
+            <a href="view.html" class="title"  onclick="passMovie('Batman')">BatMan</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('Captain America: Civil War')">Captain America: Civil War</a>
+            <a href="view.html" class="title"  onclick="passMovie('Captain America: Civil War')">Captain America: Civil War</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('The Dark Knight')">The Dark Knight</a>
+            <a href="view.html" class="title"  onclick="passMovie('The Dark Knight')">The Dark Knight</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('Edge of Tomorrow')">Edge of Tomorrow</a>
+            <a href="view.html" class="title"  onclick="passMovie('Edge of Tomorrow')">Edge of Tomorrow</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('Fantastic Four')">Fantastic Four</a>
+            <a href="view.html" class="title"  onclick="passMovie('Fantastic Four')">Fantastic Four</a>
           </td>
         </tr>
         <tr>
@@ -58,54 +58,91 @@
         </tr>
         <tr>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+            <a href="view.html" class="title"  onclick="passMovie('G.I. Joe')">G.I. Joe</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+            <a href="view.html" class="title"  onclick="passMovie('Hancock')">Hancock</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+            <a href="view.html" class="title"  onclick="passMovie('Iron man')">Iron man</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+            <a href="view.html" class="title"  onclick="passMovie('The Jackal')">The Jackal</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+            <a href="view.html" class="title"  onclick="passMovie('Kill Bill Vol.1')">Kill Bill Vol.1</a>
           </td>
           <td>
-            <a href="view.html" id="title"  onclick="passMovie('')"></a>
+            <a href="view.html" class="title"  onclick="passMovie('La La Land')">La La Land</a>
           </td>
         </tr>
         <tr>
-          <th><h3>K</h3></th>
-          <th><h3>L</h3></th>
           <th><h3>M</h3></th>
           <th><h3>N</h3></th>
           <th><h3>O</h3></th>
           <th><h3>P</h3></th>
-        </tr>
-        <tr>
-
-        </tr>
-        <tr>
           <th><h3>Q</h3></th>
           <th><h3>R</h3></th>
+        </tr>
+        <tr>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Madagascar')">Madagascar</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('National Treasure')">National Treasure</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Ocean\'s Twelve')">Ocean's Twelve</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('The Passion of the Christ')">The Passion of the Christ</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Quantum of Solace')">Quantum of Solace</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Raiders of the Lost Ark')">Raiders of the Lost Ark</a>
+          </td>
+        </tr>
+        <tr>
           <th><h3>S</h3></th>
           <th><h3>T</h3></th>
           <th><h3>U</h3></th>
           <th><h3>V</h3></th>
-        </tr>
-        <tr>
-
-        </tr>
-        <tr>
           <th><h3>W</h3></th>
           <th><h3>X</h3></th>
+        </tr>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('S.W.A.T.')">S.W.A.T.</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Taken')">Taken</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Up')">Up</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Valentine\'s Day')">Valentine's Day</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Wall-E')">Wall-E</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('X-Men')">X-Men</a>
+          </td>
+        <tr>
+        </tr>
+        <tr>
           <th><h3>Y</h3></th>
           <th><h3>Z</h3></th>
         </tr>
         <tr>
-
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Yes Man')">Yes Man</a>
+          </td>
+          <td>
+            <a href="view.html" class="title"  onclick="passMovie('Zootopia')">Zootopia</a>
+          </td>
         </tr>
       </table>
     </div>
