added search input and button in listPage.html

--- a/listPage.html
+++ b/listPage.html
@@ -19,6 +19,10 @@
       </nav>
     </div>
     <div id="listPage-body">
+      <div id="searchSection">
+        <input type="text" id="search" placeholder="Search with movie title" />
+        <button type="submit" id="searchSubmitBtn">Search</button>
+      </div>
       <table>
         <tr>
           <th><h3>A</h3></th>
