complete on quiz.html page

--- a/listPage.html
+++ b/listPage.html
@@ -21,7 +21,7 @@
     <div id="listPage-body">
       <div id="searchSection">
         <input type="text" id="search" placeholder="Search with movie title" />
-        <button type="submit" id="searchSubmitBtn">Search</button>
+        <button type="submit" id="searchSubmitBtn" onclick="movieSearch()">Search</button>
       </div>
       <table>
         <tr>
@@ -116,6 +116,7 @@
           <th><h3>W</h3></th>
           <th><h3>X</h3></th>
         </tr>
+        <tr>
           <td>
             <a href="view.html" class="title"  onclick="passMovie('S.W.A.T.')">S.W.A.T.</a>
           </td>
@@ -134,7 +135,6 @@
           <td>
             <a href="view.html" class="title"  onclick="passMovie('X-Men')">X-Men</a>
           </td>
-        <tr>
         </tr>
         <tr>
           <th><h3>Y</h3></th>
