--- a/quiz.html
+++ b/quiz.html
@@ -19,15 +19,17 @@
     </div>
     <div class="main-body">
       <img src="" id="poster" width="400px" alt="No Poster(s) to Show"></img>
-      <h2 id="movieName"></h2>
-      <div id="scoreBlock">
-        <h2 id="displayScore">0 / 3</h2>
-      </div>
-      <p>Which Year the movie was released?</p>
-      <input type="text" id="inputAnswer" placeholder="Answer ex) 2017"/>
-      <button type="submit" id="submitBtn" onclick="submitAnswer()">Submit Answer</button>
-      <br/>
-      <br/>
+        <div class="info-section">
+          <h2 id="movieName"></h2>
+          <div id="scoreBlock">
+            <h2 id="displayScore">0 / 3</h2>
+          </div>
+          <p>Which Year the movie was released?</p>
+          <input type="text" id="inputAnswer" placeholder="Answer ex) 2017"/>
+          <button type="submit" id="submitBtn" onclick="submitAnswer()">Submit Answer</button>
+          <br/>
+          <br/>
+        </div>
     </div>
     <div class="footer">
       <div class="developer-info">
