--- a/finalPage.html
+++ b/finalPage.html
@@ -10,18 +10,26 @@
   <body onload="movieQuiz()">
     <div class="header">
       <h1 class="main-title">Movie Information</h1>
+      <nav class="main-nav">
+        <ul class="navigation-bar">
+          <li><a class="navigation" href="index.html">To Main</a></li>
+          <li><a class="navigation" href="listPage.html">To List</a></li>
+          <li><a class="navigation" href="quiz.html">To Quiz</a></li>
+        </ul>
+      </nav>
     </div>
     <div class="main-body">
-      <img src="http://posters.keepcalmandposters.com/7917076.jpg" width="400" id="end-page-img" alt="End page image"/>
-      <p class="source">source: keepcalmandposters.com</p>
-      <h2>THANK YOU FOR VISITING MY SITE</h2>
-      <h2>HAVE A WONDERFUL DAY</h2>
-
-      <br/>
-
-      <a href="index.html" class="main-button">To Main</button>
-      <a href="listPage.html" class="main-button">To List</button>
-      <a href="quiz.html" class="main-button">To Quiz</button>
+      <div id="end-page-img" >
+        <img src="http://posters.keepcalmandposters.com/7917076.jpg" width="400" alt="End page image"/>
+        <p class="source">source: keepcalmandposters.com</p>
+      </div>
+      <div id="good-bye">
+        <h3 id="coming-soon">COMING SOON</h3>
+        <br/>
+        <h2>THANK YOU FOR VISITING MY SITE</h2>
+        <h2>HAVE A WONDERFUL DAY</h2>
+      </div>
+      <iframe id="trailer" width="745" height="400" src="https://www.youtube.com/embed/3rIr62a3lnY" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="footer">
       <div class="developer-info">
